--- a/src/app/admin/pages/project/project.component.html
+++ b/src/app/admin/pages/project/project.component.html
@@ -110,7 +110,7 @@
                             <ul class="technology-list">
                                 <li *ngFor="let technology of technologies">
                                     <label class="btn btn-primary-active">
-                                        <input type="checkbox" formControlName="technologies"> {{technology.name}}
+                                        <input type="checkbox" formControlName="technology"> {{technology.name}}
                                     </label>
                                 </li>
                             </ul>
