--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -11362,12 +11362,12 @@ button.calendar, button.calendar:active {
 }
 
 .logo-red{
-  color: #d00a2b;
+  color: #ffa84b;
   font-weight: bold;
 }
 
 .logo-purple{
-  color: #572f92;
+  color: #083d59;
   font-weight: bold;
 }
 
