--- a/src/app/admin/pages/employee/employee.component.html
+++ b/src/app/admin/pages/employee/employee.component.html
@@ -79,7 +79,7 @@
                         <span class="red">*</span>
                         <input class="form-control" type="text" id="firstName" placeholder="First Name"
                             autocomplete="off" maxlength="100" formControlName="firstName"
-                             [ngClass]="{ 'is-invalid': submitted && f['firstName'].errors }">
+                            [ngClass]="{ 'is-invalid': submitted && f['firstName'].errors }">
                     </div>
 
                     <div class="form-group col-lg-4">
@@ -91,15 +91,16 @@
                         <label for="lastNname">Last Name</label>
                         <span class="red">*</span>
                         <input class="form-control" type="text" id="lastName" placeholder="Last Name" autocomplete="off"
-                            maxlength="100" formControlName="lastName" 
-                             [ngClass]="{ 'is-invalid': submitted && f['lastName'].errors }">
+                            maxlength="100" formControlName="lastName"
+                            [ngClass]="{ 'is-invalid': submitted && f['lastName'].errors }">
                     </div>
                 </div>
                 <div class="row">
                     <div class="form-group col-lg-4">
                         <label for="gender">Gender</label>
                         <span class="red">*</span>
-                        <select name="gender" class="form-select col-lg-12" formControlName="gender" [ngClass]="{ 'is-invalid': submitted && f['gender'].errors }">
+                        <select name="gender" class="form-select col-lg-12" formControlName="gender"
+                            [ngClass]="{ 'is-invalid': submitted && f['gender'].errors }">
                             <option value="0">--Select Gender--</option>
                             <option *ngFor="let gender of genders" [value]="gender.id">{{gender.name}}</option>
                         </select>
@@ -121,7 +122,7 @@
                         <label for="description">Designation</label>
                         <span class="red">*</span>
                         <select name="description" class="form-select col-lg-12" formControlName="designationId"
-                         [ngClass]="{ 'is-invalid': submitted && f['designationId'].errors }">
+                            [ngClass]="{ 'is-invalid': submitted && f['designationId'].errors }">
                             <option value="0">-- Select Designation --</option>
                             <option *ngFor="let designation of designations" [value]="designation.id">
                                 {{designation.name}}</option>
@@ -200,7 +201,7 @@
                         <label for="status">Status </label>
                         <span class="red">*</span>
                         <select name="status" class="form-select col-lg-12" formControlName="statusId"
-                        [ngClass]="{ 'is-invalid': submitted && f['statusId'].errors }" >
+                            [ngClass]="{ 'is-invalid': submitted && f['statusId'].errors }">
                             <option value="0">-- Select Status --</option>
                             <option *ngFor="let status of status" [value]="status.id">{{status.name}}
                             </option>
@@ -208,6 +209,19 @@
                     </div>
                 </div>
 
+                <div class="row">
+                    <div class="form-group col-lg-12">
+                        <label for="status">Upload Documents </label>
+                        <ul>
+                            <!-- <li *ngFor="let doc of employeeDocuments">
+                                
+                            </li> -->
+                            <li>
+                                <span>No documents found</span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
                 <div class="row submit-buttons">
                     <div class="form-group col-lg-12">
                         <input type="submit" class="btn btn-success" value="Save" />
