--- a/src/app/admin/pages/employee/employee.component.html
+++ b/src/app/admin/pages/employee/employee.component.html
@@ -410,7 +410,7 @@
                             <div class="col-lg-12">
                                 <h5><i>
                                     <strong>
-                                        Upload Documents
+                                        Documents
                                     </strong> 
                                     </i> 
                                 </h5>
